src/test/deca/context/invalid/test_pass_3_rvalue_failed.deca
// Description:
//    Program testing that you can not do an assign with the right operand that do not have the good type
//
// Results:
//    error
//
// History:
//    Created on 10/01/2025

{
    int a = 5.4;
}
